--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -124,44 +124,44 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACC
-        CAAAAk1TRnQBSQFMAgEBAgEAAWQBAgFkAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBLAEtAf8BqgEdAR4B/wGkARoBGwH/AZ8BFwEYAf8BmgIV
-        Af8BlAISAf8BjwIPAf8BiQIMAf8BgwIJAf8BQAEDAQQB/wFAAQMBBAH/AToCAQH/ATYCAAH/yAABzwEz
-        ATQB/wHzAY4BjwH/AeYBgAGBAf8BqgEMAQAB/wEPAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHO
-        AcgBxAH/AR4BFQEQAf8BngEGAQAB/wGcAQUBAAH/AZgBAQEAAf8BOgIBAf8kAAM2AVkCRwFGAYEDEAEV
-        mAAB0QE3ATgC/wGZAZoB/wHsAYYBhwH/AeYBgAGBAf8BOQEjARMB/wEPAQQBAAH/AY0BQAEwAf8B7QHg
-        AdgB/wHxAecB4AH/AY8BRwE7Af8BowEJAQAB/wGiAQoBBAH/AZwBBQEAAf8BQAEDAQQB/yQAAywBQwFm
-        Ak0B+gJqAUcB+QMvAUqUAAHUAT0BPgL/AZ8BoAH/AfUBkAGRAf8B7AGGAYcB/wE5ASMBEwH/AwAB/wEP
-        AQQBAAH/AekB2QHOAf8B7AHdAdQB/wGFATwBLwH/Aa4BEwELAf8BqgERAQwB/wGjAQoBBAH/AUUCBgH/
-        JAADGAEiAzgBXAGBAX8BTwH+AmIBSQH2AwABAZAAAdcBQwFEAv8BqQGqAf8B+wGfAaAB/wH1AZMBlAH/
-        ATkBIwETAf8BOQEjARMB/wE5ASMBEwH/ATkBIwETAf8BPgEqARoB/wFFATIBIwH/AboBHgEcAf8BsgEX
-        ARQB/wGqAREBDAH/AYMCCQH/LAACXAFYAdEBgQF/AVQB/gM/AW2QAAHbAYMBhAL/AbMBtAL/Aa0BrgH/
-        AfwBowGkAf8B9AGOAY8B/wHsAYYBhwH/AeYBgAGBAf8B3wFBAUIB/wHXATkBOgH/AdEBMwE0Af8BwQEl
-        ASQB/wG6AR4BHAH/AbIBGAEUAf8BiQIMAf8cAAMHAQkMAAMuAUcBaAEzASsB/AGAAX8BZgH+AwQBBowA
-        Ad8BigGLAv8BuwG8Av8BtgG3Af8ByQErASgB/wHEASYBHgH/Ab4BIAETAf8BuAEaAQcB/wGzARUBAAH/
-        Aa0BDwEAAf8BpwEJAQAB/wGhAQMBAAH/AcEBJQEkAf8BugEeARwB/wGPAg8B/wwAAeMBQAEKAf8B1gE6
-        AQgB/wHHATEBAgH/AbYBJwEAAf8BrQEiAQAB/wGVARQBAAH/CAADGAEiAX8BaQE9Af4BqAGEAUAB/QNC
-        AXWMAAHiAZEBkgL/Ab0BvgH/AcwBLgEvCf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHl
-        AdEBxgH/AeEBygG9Af8BoQEDAQAB/wHCASUBJAH/AZQCEgH/DAAB5QGDARoB/wHfATsBAAH/AeoBggER
-        Af8B8wGaATIB/wHiAYwBKQH/AyYBOQgAAwQBBQGoAkAB/QJiAUkB9gNWAbSMAAHlAZcBmAL/Ab0BvgH/
-        AdMBNQE2Df8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AacBCQEAAf8BzAIv
-        Af8BmgIVAf8MAAHmAY4BKgH/AewBggETAf8B8wGNASMB/wHsAZwBPgH/AVYCVAGrAyoBQQgAAwIBAwJf
-        ATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBPgE/Ef8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHe
-        Af8B6gHbAdIB/wGtAQ8BAAH/AdcBOQE6Af8BnwEXARgB/wwAAecBmQE7Af8B8wGaATIB/wH0AZwBOQH/
-        A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHtAaYBpwL/Ab0BvgH/
-        AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEVAQAB/wHfAUEBQgH/AaQBGgEbAf8IAAMH
-        AQkB6QGkAYEB/wNeAdUDRwGAAW4BWQFFAfwCfwFeAf4BxwE4AQ0B/wFTAk0B+gNZAccCYQFbAeEBUwIr
-        AfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2Af8B9gHuAeoB/wG4ARoBBwH/
-        AS8CAAH/AaoBHQEeAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgFqAl8B+wNkAewCXwFEAfsBXAIrAfwBbQFg
-        AVEB9wJkAVMB8QNkAewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4AZIBkx3/AfsB+AH2Af8BvgEgARMB/wGw
-        ASABIQH/AbABIAEhAf8cAANXAbgBbQFYAUMB/ANkAecDXwHjA2EB3ANfAeMDZwHyAxMBGowAAfUBtgG3
-        Af8B9QG2AbcB/wHzAbIBswH/AfEBrQGuAf8B7gGnAagB/wHqAaEBogH/AecBmgGbAf8B5AGTAZQB/wHg
-        AY4BjwH/Ad0BhwGIAf8B2gGAAYEB/wHWAUIBQwH/AdMBPAE9Af8B0QE3ATgB/yAAAzgBXANXAbgDYQHi
-        A1sBxANOAZQDEwEa/wCNAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAE/wQA
-        AYABAQL/BAABgAEBAf8BHwQAAYABAQH/AQ8EAAGAAQEB/wEHBAABgAEBAf8BxwQAAYABAQH9AcMEAAGA
-        AQEBwAHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAFDBAABgAEBAYABAwQAAYABAQHIAQMEAAGA
-        AQEB/AEDBAABgAEBAf4BBwQABP8EAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB6
+        CAAAAk1TRnQBSQFMAgEBAgEAAWwBAgFsAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBKwEsAf8BqgEcAR0B/wGkARkBGgH/AZ8BFgEXAf8BmgIU
+        Af8BlAIRAf8BjwIOAf8BiQILAf8BgwIIAf8BPwECAQMB/wE/AQIBAwH/ATkCAAH/ATUCAAH/yAABzwEy
+        ATMB/wHzAY4BjwH/AeYBgAGBAf8BqgELAQAB/wEOAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHO
+        AcgBxAH/AR0BFAEPAf8BngEFAQAB/wGcAQQBAAH/AZgCAAH/ATkCAAH/JAADNgFZAkcBRgGBAxABFZgA
+        AdEBNgE3Av8BmQGaAf8B7AGGAYcB/wHmAYABgQH/ATgBIgESAf8BDgEDAQAB/wGNAT8BLwH/Ae0B4AHY
+        Af8B8QHnAeAB/wGPAUYBOgH/AaMBCAEAAf8BogEJAQMB/wGcAQQBAAH/AT8BAgEDAf8kAAMsAUMBZAJN
+        AfoCagFHAfkDLwFKlAAB1AE8AT0C/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BOAEiARIB/wMAAf8BDgED
+        AQAB/wHpAdkBzgH/AewB3QHUAf8BhQE7AS4B/wGuARIBCgH/AaoBEAELAf8BowEJAQMB/wFEAgUB/yQA
+        AxgBIgM4AVwCfwFPAf4CYgFJAfYDAAEBkAAB1wFCAUMC/wGpAaoB/wH7AZ8BoAH/AfUBkwGUAf8BOAEi
+        ARIB/wE4ASIBEgH/ATgBIgESAf8BOAEiARIB/wE9ASkBGQH/AUQBMQEiAf8BugEdARsB/wGyARYBEwH/
+        AaoBEAELAf8BgwIIAf8sAAJcAVgB0QJ/AVQB/gM/AW2QAAHbAYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGk
+        Af8B9AGOAY8B/wHsAYYBhwH/AeYBgAGBAf8B3wFAAUEB/wHXATgBOQH/AdEBMgEzAf8BwQEkASMB/wG6
+        AR0BGwH/AbIBFwETAf8BiQILAf8cAAMHAQkMAAMuAUcBZwEyASsB/AJ/AWYB/gMEAQaMAAHfAYoBiwL/
+        AbsBvAL/AbYBtwH/AckBKgEnAf8BxAElAR0B/wG+AR8BEgH/AbgBGQEGAf8BswEUAQAB/wGtAQ4BAAH/
+        AacBCAEAAf8BoQECAQAB/wHBASQBIwH/AboBHQEbAf8BjwIOAf8MAAHjAT8BCQH/AdYBOQEHAf8BxwEw
+        AQEB/wG2ASYBAAH/Aa0BIQEAAf8BlQETAQAB/wgAAxgBIgF/AWkBPQH+AagBhAFAAf0DQgF1jAAB4gGR
+        AZIC/wG9Ab4B/wHMAS0BLgn/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wHh
+        AcoBvQH/AaEBAgEAAf8BwgEkASMB/wGUAhEB/wwAAeUBgwEZAf8B3wE6AQAB/wHqAYIBEAH/AfMBmgEx
+        Af8B4gGMASgB/wMmATkIAAMEAQUBqAJAAf0CYgFJAfYDVgG0jAAB5QGXAZgC/wG9Ab4B/wHTATQBNQ3/
+        AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGnAQgBAAH/AcwCLgH/AZoCFAH/
+        DAAB5gGOASkB/wHsAYIBEgH/AfMBjQEiAf8B7AGcAT0B/wFWAlQBqwMqAUEIAAMCAQMCXwEyAfsCYAFZ
+        AesDWQHCjAAB6QGeAZ8C/wG9Ab4B/wHcAT0BPhH/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
+        Af8BrQEOAQAB/wHXATgBOQH/AZ8BFgEXAf8MAAHnAZkBOgH/AfMBmgExAf8B9AGcATgB/wNfAegBqAJA
+        Af0CXAE+AfgCQAE/AW8EAAMaASQCXwFXAegCYgFYAe8DWAG8jAAB7QGmAacC/wG9Ab4B/wHmAYABgRX/
+        AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AbMBFAEAAf8B3wFAAUEB/wGkARkBGgH/CAADBwEJAekBpAGB
+        Af8DXgHVA0cBgAFtAVgBQwH8An8BXgH+AccBNwEMAf8BUgJNAfoDWQHHAmEBWwHhAVECKwH8AmoBVgH5
+        A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/AfYB7gHqAf8BuAEZAQYB/wEuAgAB/wGq
+        ARwBHQH/DAAB6gGqAYsB/wMhATAEAANUAaYBZwJfAfsDZAHsAl8BRAH7AVsCKwH8AW0BYAFRAfcCZAFT
+        AfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7AfgB9gH/Ab4BHwESAf8BsAEfASAB/wGw
+        AR8BIAH/HAADVwG4AWwBVwFBAfwDZAHnA18B4wNhAdwDXwHjA2cB8gMTARqMAAH1AbYBtwH/AfUBtgG3
+        Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHnAZoBmwH/AeQBkwGUAf8B4AGOAY8B/wHd
+        AYcBiAH/AdoBgAGBAf8B1gFBAUIB/wHTATsBPAH/AdEBNgE3Af8gAAM4AVwDVwG4A2EB4gNbAcQDTgGU
+        AxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAGAAQEC/wQA
+        AYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/AccEAAGAAQEB/QHDBAABgAEBAcABwwQA
+        AYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGAAQMEAAGAAQEByAEDBAABgAEBAfwBAwQA
+        AYABAQH+AQcEAAT/BAAL
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4537,6 +4537,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
