Sviluppo Schedina PS + aggiunta comandi.

--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -124,44 +124,43 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB2
-        CAAAAk1TRnQBSQFMAgEBAgEAAXwBAgF8AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBKQEqAf8BqgEaARsB/wGkARcBGAH/AZ8BFAEVAf8BmgIS
-        Af8BlAIPAf8BjwIMAf8BiQIJAf8BgwIGAf8BPQEAAQEB/wE9AQABAQH/ATcCAAH/ATMCAAH/yAABzwEw
-        ATEB/wHzAY4BjwH/AeYBgAGBAf8BqgEJAQAB/wEMAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHO
-        AcgBxAH/ARsBEgENAf8BngEDAQAB/wGcAQIBAAH/AZgCAAH/ATcCAAH/JAADNgFZAkcBRgGBAxABFZgA
-        AdEBNAE1Av8BmQGaAf8B7AGGAYcB/wHmAYABgQH/ATYBIAEQAf8BDAEBAQAB/wGNAT0BLQH/Ae0B4AHY
-        Af8B8QHnAeAB/wGPAUQBOAH/AaMBBgEAAf8BogEHAQEB/wGcAQIBAAH/AT0BAAEBAf8kAAMsAUMBYAJN
-        AfoCagFHAfkDLwFKlAAB1AE6ATsC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BNgEgARAB/wMAAf8BDAEB
-        AQAB/wHpAdkBzgH/AewB3QHUAf8BhQE5ASwB/wGuARABCAH/AaoBDgEJAf8BowEHAQEB/wFCAgMB/yQA
-        AxgBIgM4AVwCfwFPAf4CYgFJAfYDAAEBkAAB1wFAAUEC/wGpAaoB/wH7AZ8BoAH/AfUBkwGUAf8BNgEg
-        ARAB/wE2ASABEAH/ATYBIAEQAf8BNgEgARAB/wE7AScBFwH/AUIBLwEgAf8BugEbARkB/wGyARQBEQH/
-        AaoBDgEJAf8BgwIGAf8sAAJcAVgB0QJ/AVQB/gM/AW2QAAHbAYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGk
-        Af8B9AGOAY8B/wHsAYYBhwH/AeYBgAGBAf8B3wE+AT8B/wHXATYBNwH/AdEBMAExAf8BwQEiASEB/wG6
-        ARsBGQH/AbIBFQERAf8BiQIJAf8cAAMHAQkMAAMuAUcBZQEwASsB/AJ/AWYB/gMEAQaMAAHfAYoBiwL/
-        AbsBvAL/AbYBtwH/AckBKAElAf8BxAEjARsB/wG+AR0BEAH/AbgBFwEEAf8BswESAQAB/wGtAQwBAAH/
-        AacBBgEAAf8BoQIAAf8BwQEiASEB/wG6ARsBGQH/AY8CDAH/DAAB4wE9AQcB/wHWATcBBQH/AccBLgEA
-        Af8BtgEkAQAB/wGtAR8BAAH/AZUBEQEAAf8IAAMYASIBfwFpAT0B/gGoAYQBQAH9A0IBdYwAAeIBkQGS
-        Av8BvQG+Af8BzAErASwJ/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/AeUB0QHGAf8B4QHK
-        Ab0B/wGhAgAB/wHCASIBIQH/AZQCDwH/DAAB5QGDARcB/wHfATgBAAH/AeoBggEOAf8B8wGaAS8B/wHi
-        AYwBJgH/AyYBOQgAAwQBBQGoAkAB/QJiAUkB9gNWAbSMAAHlAZcBmAL/Ab0BvgH/AdMBMgEzDf8B+wH4
-        AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AacBBgEAAf8BzAIsAf8BmgISAf8MAAHm
-        AY4BJwH/AewBggEQAf8B8wGNASAB/wHsAZwBOwH/AVYCVAGrAyoBQQgAAwIBAwJfATIB+wJgAVkB6wNZ
-        AcKMAAHpAZ4BnwL/Ab0BvgH/AdwBOwE8Ef8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wGt
-        AQwBAAH/AdcBNgE3Af8BnwEUARUB/wwAAecBmQE4Af8B8wGaAS8B/wH0AZwBNgH/A18B6AGoAkAB/QJc
-        AT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNYAbyMAAHtAaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4
-        AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswESAQAB/wHfAT4BPwH/AaQBFwEYAf8IAAMHAQkB6QGkAYEB/wNe
-        AdUDRwGAAWsBVgE/AfwCfwFeAf4BxwE1AQoB/wFQAk0B+gNZAccCYQFbAeEBTQIrAfwCagFWAfkDXAHf
-        jAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2Af8B9gHuAeoB/wG4ARcBBAH/ASwCAAH/AaoBGgEb
-        Af8MAAHqAaoBiwH/AyEBMAQAA1QBpgFiAl8B+wNkAewCXwFEAfsBWQIrAfwBbQFgAVEB9wJkAVMB8QNk
-        AewDXgHZjAAB8wGyAbMC/wG9Ab4B/wH4AZIBkx3/AfsB+AH2Af8BvgEdARAB/wGwAR0BHgH/AbABHQEe
-        Af8cAANXAbgBagFVAT4B/ANkAecDXwHjA2EB3ANfAeMDZwHyAxMBGowAAfUBtgG3Af8B9QG2AbcB/wHz
-        AbIBswH/AfEBrQGuAf8B7gGnAagB/wHqAaEBogH/AecBmgGbAf8B5AGTAZQB/wHgAY4BjwH/Ad0BhwGI
-        Af8B2gGAAYEB/wHWAT8BQAH/AdMBOQE6Af8B0QE0ATUB/yAAAzgBXANXAbgDYQHiA1sBxANOAZQDEwEa
-        /wCNAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAE/wQAAYABAQL/BAABgAEB
-        Af8BHwQAAYABAQH/AQ8EAAGAAQEB/wEHBAABgAEBAf8BxwQAAYABAQH9AcMEAAGAAQEBwAHDBAABgAEB
-        AcABwwQAAYABAQHAAcMEAAGAAQEBwAFDBAABgAEBAYABAwQAAYABAQHIAQMEAAGAAQEB/AEDBAABgAEB
-        Af4BBwQABP8EAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABm
+        CAAAAk1TRnQBSQFMAgEBAgEAAYwBAgGMAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBJwEoAf8BqgEYARkB/wGkARUBFgH/AZ8BEgETAf8BmgIQ
+        Af8BlAINAf8BjwIKAf8BiQIHAf8BgwIEAf8BOwIAAf8BOwIAAf8BNQIAAf8BMQIAAf/IAAHPAS4BLwH/
+        AfMBjgGPAf8B5gGAAYEB/wGqAQcBAAH/AQoCAAH/AcMBtAGrAf8BxgG7AbMB/wHKAcEBvAH/Ac4ByAHE
+        Af8BGQEQAQsB/wGeAQEBAAH/AZwCAAH/AZgCAAH/ATUCAAH/JAADNgFZAkcBRgGBAxABFZgAAdEBMgEz
+        Av8BmQGaAf8B7AGGAYcB/wHmAYABgQH/ATQBHgEOAf8BCgIAAf8BjQE7ASsB/wHtAeAB2AH/AfEB5wHg
+        Af8BjwFCATYB/wGjAQQBAAH/AaIBBQEAAf8BnAIAAf8BOwIAAf8kAAMsAUMBXAJNAfoCagFHAfkDLwFK
+        lAAB1AE4ATkC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BNAEeAQ4B/wMAAf8BCgIAAf8B6QHZAc4B/wHs
+        Ad0B1AH/AYUBNwEqAf8BrgEOAQYB/wGqAQwBBwH/AaMBBQEAAf8BQAIBAf8kAAMYASIDOAFcAn8BTwH+
+        AmIBSQH2AwABAZAAAdcBPgE/Av8BqQGqAf8B+wGfAaAB/wH1AZMBlAH/ATQBHgEOAf8BNAEeAQ4B/wE0
+        AR4BDgH/ATQBHgEOAf8BOQElARUB/wFAAS0BHgH/AboBGQEXAf8BsgESAQ8B/wGqAQwBBwH/AYMCBAH/
+        LAACXAFYAdECfwFUAf4DPwFtkAAB2wGDAYQC/wGzAbQC/wGtAa4B/wH8AaMBpAH/AfQBjgGPAf8B7AGG
+        AYcB/wHmAYABgQH/Ad8BPAE9Af8B1wE0ATUB/wHRAS4BLwH/AcEBIAEfAf8BugEZARcB/wGyARMBDwH/
+        AYkCBwH/HAADBwEJDAADLgFHAWMBLgErAfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJ
+        ASYBIwH/AcQBIQEZAf8BvgEbAQ4B/wG4ARUBAgH/AbMBEAEAAf8BrQEKAQAB/wGnAQQBAAH/AaECAAH/
+        AcEBIAEfAf8BugEZARcB/wGPAgoB/wwAAeMBOwEFAf8B1gE1AQMB/wHHASwBAAH/AbYBIgEAAf8BrQEd
+        AQAB/wGVAQ8BAAH/CAADGAEiAX8BaQE9Af4BqAGEAUAB/QNCAXWMAAHiAZEBkgL/Ab0BvgH/AcwBKQEq
+        Cf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AeEBygG9Af8BoQIAAf8BwgEg
+        AR8B/wGUAg0B/wwAAeUBgwEVAf8B3wE2AQAB/wHqAYIBDAH/AfMBmgEtAf8B4gGMASQB/wMmATkIAAME
+        AQUBqAJAAf0CYgFJAfYDVgG0jAAB5QGXAZgC/wG9Ab4B/wHTATABMQ3/AfsB+AH2Af8B9gHuAeoB/wHw
+        AeUB3gH/AeoB2wHSAf8B5QHRAcYB/wGnAQQBAAH/AcwCKgH/AZoCEAH/DAAB5gGOASUB/wHsAYIBDgH/
+        AfMBjQEeAf8B7AGcATkB/wFWAlQBqwMqAUEIAAMCAQMCXwEyAfsCYAFZAesDWQHCjAAB6QGeAZ8C/wG9
+        Ab4B/wHcATkBOhH/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8BrQEKAQAB/wHXATQBNQH/
+        AZ8BEgETAf8MAAHnAZkBNgH/AfMBmgEtAf8B9AGcATQB/wNfAegBqAJAAf0CXAE+AfgCQAE/AW8EAAMa
+        ASQCXwFXAegCYgFYAe8DWAG8jAAB7QGmAacC/wG9Ab4B/wHmAYABgRX/AfsB+AH2Af8B9gHuAeoB/wHw
+        AeUB3gH/AbMBEAEAAf8B3wE8AT0B/wGkARUBFgH/CAADBwEJAekBpAGBAf8DXgHVA0cBgAFpAVMBPQH8
+        An8BXgH+AccBMwEIAf8BTgJNAfoDWQHHAmEBWwHhAUkCKwH8AmoBVgH5A1wB34wAAfABrAGtAv8BvQG+
+        Af8B7wGJAYoZ/wH7AfgB9gH/AfYB7gHqAf8BuAEVAQIB/wEqAgAB/wGqARgBGQH/DAAB6gGqAYsB/wMh
+        ATAEAANUAaYDXwH7A2QB7AJfAUQB+wFXAisB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/
+        Ab0BvgH/AfgBkgGTHf8B+wH4AfYB/wG+ARsBDgH/AbABGwEcAf8BsAEbARwB/xwAA1cBuAFoAVEBPAH8
+        A2QB5wNfAeMDYQHcA18B4wNnAfIDEwEajAAB9QG2AbcB/wH1AbYBtwH/AfMBsgGzAf8B8QGtAa4B/wHu
+        AacBqAH/AeoBoQGiAf8B5wGaAZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBPQE+
+        Af8B0wE3ATgB/wHRATIBMwH/IAADOAFcA1cBuANhAeIDWwHEA04BlAMTARr/AI0AAUIBTQE+BwABPgMA
+        ASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wEfBAABgAEBAf8BDwQA
+        AYABAQH/AQcEAAGAAQEB/wHHBAABgAEBAf0BwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABwwQA
+        AYABAQHAAUMEAAGAAQEBgAEDBAABgAEBAcgBAwQAAYABAQH8AQMEAAGAAQEB/gEHBAAE/wQACw==
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4537,6 +4536,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
