Sviluppo Schedina PS - Procedure per i componenti di una prenotazione.

--- a/Codice/Form/Hotel/SchedinaPS.resx
+++ b/Codice/Form/Hotel/SchedinaPS.resx
@@ -124,43 +124,43 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABi
-        CAAAAk1TRnQBSQFMAgEBAgEAAZwBAgGcAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBJQEmAf8BqgEWARcB/wGkARMBFAH/AZ8BEAERAf8BmgIO
-        Af8BlAILAf8BjwIIAf8BiQIFAf8BgwICAf8BOQIAAf8BOQIAAf8BMwIAAf8BLwIAAf/IAAHPASwBLQH/
-        AfMBjgGPAf8B5gGAAYEB/wGqAQUBAAH/AQgCAAH/AcMBtAGrAf8BxgG7AbMB/wHKAcEBvAH/Ac4ByAHE
-        Af8BFwEOAQkB/wGeAgAB/wGcAgAB/wGYAgAB/wEzAgAB/yQAAzYBWQJHAUYBgQMQARWYAAHRATABMQL/
-        AZkBmgH/AewBhgGHAf8B5gGAAYEB/wEyARwBDAH/AQgCAAH/AY0BOQEpAf8B7QHgAdgB/wHxAecB4AH/
-        AY8BQAE0Af8BowECAQAB/wGiAQMBAAH/AZwCAAH/ATkCAAH/JAADLAFDAVgCTQH6AmoBRwH5Ay8BSpQA
-        AdQBNgE3Av8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/ATIBHAEMAf8DAAH/AQgCAAH/AekB2QHOAf8B7AHd
-        AdQB/wGFATUBKAH/Aa4BDAEEAf8BqgEKAQUB/wGjAQMBAAH/AT4CAAH/JAADGAEiAzgBXAJ/AU8B/gJi
-        AUkB9gMAAQGQAAHXATwBPQL/AakBqgH/AfsBnwGgAf8B9QGTAZQB/wEyARwBDAH/ATIBHAEMAf8BMgEc
-        AQwB/wEyARwBDAH/ATcBIwETAf8BPgErARwB/wG6ARcBFQH/AbIBEAENAf8BqgEKAQUB/wGDAgIB/ywA
-        AlwBWAHRAn8BVAH+Az8BbZAAAdsBgwGEAv8BswG0Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGH
-        Af8B5gGAAYEB/wHfAToBOwH/AdcBMgEzAf8B0QEsAS0B/wHBAR4BHQH/AboBFwEVAf8BsgERAQ0B/wGJ
-        AgUB/xwAAwcBCQwAAy4BRwFhASwBKwH8An8BZgH+AwQBBowAAd8BigGLAv8BuwG8Av8BtgG3Af8ByQEk
-        ASEB/wHEAR8BFwH/Ab4BGQEMAf8BuAETAQAB/wGzAQ4BAAH/Aa0BCAEAAf8BpwECAQAB/wGhAgAB/wHB
-        AR4BHQH/AboBFwEVAf8BjwIIAf8MAAHjATkBAwH/AdYBMwEBAf8BxwEqAQAB/wG2ASABAAH/Aa0BGwEA
-        Af8BlQENAQAB/wgAAxgBIgF/AWkBPQH+AagBhAFAAf0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMAScBKAn/
-        AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wHhAcoBvQH/AaECAAH/AcIBHgEd
-        Af8BlAILAf8MAAHlAYMBEwH/Ad8BNAEAAf8B6gGCAQoB/wHzAZoBKwH/AeIBjAEiAf8DJgE5CAADBAEF
-        AagCQAH9AmIBSQH2A1YBtIwAAeUBlwGYAv8BvQG+Af8B0wEuAS8N/wH7AfgB9gH/AfYB7gHqAf8B8AHl
-        Ad4B/wHqAdsB0gH/AeUB0QHGAf8BpwECAQAB/wHMAigB/wGaAg4B/wwAAeYBjgEjAf8B7AGCAQwB/wHz
-        AY0BHAH/AewBnAE3Af8BVgJUAasDKgFBCAADAgEDAl8BMgH7AmABWQHrA1kBwowAAekBngGfAv8BvQG+
-        Af8B3AE3ATgR/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/Aa0BCAEAAf8B1wEyATMB/wGf
-        ARABEQH/DAAB5wGZATQB/wHzAZoBKwH/AfQBnAEyAf8DXwHoAagCQAH9AlwBPgH4AkABPwFvBAADGgEk
-        Al8BVwHoAmIBWAHvA1gBvIwAAe0BpgGnAv8BvQG+Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHl
-        Ad4B/wGzAQ4BAAH/Ad8BOgE7Af8BpAETARQB/wgAAwcBCQHpAaQBgQH/A14B1QNHAYABZwFPATsB/AJ/
-        AV4B/gHHATEBBgH/A00B+gNZAccCYQFbAeEBRQIrAfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHv
-        AYkBihn/AfsB+AH2Af8B9gHuAeoB/wG4ARMBAAH/ASgCAAH/AaoBFgEXAf8MAAHqAaoBiwH/AyEBMAQA
-        A1QBpgNfAfsDZAHsAl8BRAH7AVUCKwH8AW0BYAFRAfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+
-        Af8B+AGSAZMd/wH7AfgB9gH/Ab4BGQEMAf8BsAEZARoB/wGwARkBGgH/HAADVwG4AWYBTQE6AfwDZAHn
-        A18B4wNhAdwDXwHjA2cB8gMTARqMAAH1AbYBtwH/AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGo
-        Af8B6gGhAaIB/wHnAZoBmwH/AeQBkwGUAf8B4AGOAY8B/wHdAYcBiAH/AdoBgAGBAf8B1gE7ATwB/wHT
-        ATUBNgH/AdEBMAExAf8gAAM4AVwDVwG4A2EB4gNbAcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMA
-        AUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAGAAQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEB
-        Af8BBwQAAYABAQH/AccEAAGAAQEB/QHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEB
-        AcABQwQAAYABAQGAAQMEAAGAAQEByAEDBAABgAEBAfwBAwQAAYABAQH+AQcEAAT/BAAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
+        CAAAAk1TRnQBSQFMAgEBAgEAAbQBAgG0AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBIgEjAf8BqgETARQB/wGkARABEQH/AZ8BDQEOAf8BmgIL
+        Af8BlAIIAf8BjwIFAf8BiQICAf8BgwIAAf8BNgIAAf8BNgIAAf8BMAIAAf8BLAIAAf/IAAHPASkBKgH/
+        AfMBjgGPAf8B5gGAAYEB/wGqAQIBAAH/AQUCAAH/AcMBtAGrAf8BxgG7AbMB/wHKAcEBvAH/Ac4ByAHE
+        Af8BFAELAQYB/wGeAgAB/wGcAgAB/wGYAgAB/wEwAgAB/yQAAzYBWQJHAUYBgQMQARWYAAHRAS0BLgL/
+        AZkBmgH/AewBhgGHAf8B5gGAAYEB/wEvARkBCQH/AQUCAAH/AY0BNgEmAf8B7QHgAdgB/wHxAecB4AH/
+        AY8BPQExAf8BowIAAf8BogIAAf8BnAIAAf8BNgIAAf8kAAMsAUMBUwJNAfoCagFHAfkDLwFKlAAB1AEz
+        ATQC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BLwEZAQkB/wMAAf8BBQIAAf8B6QHZAc4B/wHsAd0B1AH/
+        AYUBMgElAf8BrgEJAQEB/wGqAQcBAgH/AaMCAAH/ATsCAAH/JAADGAEiAzgBXAJ/AU8B/gJiAUkB9gMA
+        AQGQAAHXATkBOgL/AakBqgH/AfsBnwGgAf8B9QGTAZQB/wEvARkBCQH/AS8BGQEJAf8BLwEZAQkB/wEv
+        ARkBCQH/ATQBIAEQAf8BOwEoARkB/wG6ARQBEgH/AbIBDQEKAf8BqgEHAQIB/wGDAgAB/ywAAlwBWAHR
+        An8BVAH+Az8BbZAAAdsBgwGEAv8BswG0Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGA
+        AYEB/wHfATcBOAH/AdcBLwEwAf8B0QEpASoB/wHBARsBGgH/AboBFAESAf8BsgEOAQoB/wGJAgIB/xwA
+        AwcBCQwAAy4BRwFeAisB/AJ/AWYB/gMEAQaMAAHfAYoBiwL/AbsBvAL/AbYBtwH/AckBIQEeAf8BxAEc
+        ARQB/wG+ARYBCQH/AbgBEAEAAf8BswELAQAB/wGtAQUBAAH/AacCAAH/AaECAAH/AcEBGwEaAf8BugEU
+        ARIB/wGPAgUB/wwAAeMBNgEAAf8B1gEwAQAB/wHHAScBAAH/AbYBHQEAAf8BrQEYAQAB/wGVAQoBAAH/
+        CAADGAEiAX8BaQE9Af4BqAGEAUAB/QNCAXWMAAHiAZEBkgL/Ab0BvgH/AcwBJAElCf8B+wH4AfYB/wH2
+        Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AeEBygG9Af8BoQIAAf8BwgEbARoB/wGUAggB/wwA
+        AeUBgwEQAf8B3wExAQAB/wHqAYIBBwH/AfMBmgEoAf8B4gGMAR8B/wMmATkIAAMEAQUBqAJAAf0CYgFJ
+        AfYDVgG0jAAB5QGXAZgC/wG9Ab4B/wHTASsBLA3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
+        Af8B5QHRAcYB/wGnAgAB/wHMAiUB/wGaAgsB/wwAAeYBjgEgAf8B7AGCAQkB/wHzAY0BGQH/AewBnAE0
+        Af8BVgJUAasDKgFBCAADAgEDAl8BMgH7AmABWQHrA1kBwowAAekBngGfAv8BvQG+Af8B3AE0ATUR/wH7
+        AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/Aa0BBQEAAf8B1wEvATAB/wGfAQ0BDgH/DAAB5wGZ
+        ATEB/wHzAZoBKAH/AfQBnAEvAf8DXwHoAagCQAH9AlwBPgH4AkABPwFvBAADGgEkAl8BVwHoAmIBWAHv
+        A1gBvIwAAe0BpgGnAv8BvQG+Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzAQsBAAH/
+        Ad8BNwE4Af8BpAEQAREB/wgAAwcBCQHpAaQBgQH/A14B1QNHAYABZAFJATgB/AJ/AV4B/gHHAS4BAwH/
+        A00B+gNZAccCYQFbAeEBPwIrAfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2
+        Af8B9gHuAeoB/wG4ARABAAH/ASUCAAH/AaoBEwEUAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgNfAfsDZAHs
+        Al8BRAH7AU8CKwH8AW0BYAFRAfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7
+        AfgB9gH/Ab4BFgEJAf8BsAEWARcB/wGwARYBFwH/HAADVwG4AWMBRwE3AfwDZAHnA18B4wNhAdwDXwHj
+        A2cB8gMTARqMAAH1AbYBtwH/AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHn
+        AZoBmwH/AeQBkwGUAf8B4AGOAY8B/wHdAYcBiAH/AdoBgAGBAf8B1gE4ATkB/wHTATIBMwH/AdEBLQEu
+        Af8gAAM4AVwDVwG4A2EB4gNbAcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEABP8EAAGAAQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/
+        AccEAAGAAQEB/QHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGA
+        AQMEAAGAAQEByAEDBAABgAEBAfwBAwQAAYABAQH+AQcEAAT/BAAL
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4536,6 +4536,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
