Sviluppo procedure SchedinaPS.

--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -124,43 +124,43 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
-        CAAAAk1TRnQBSQFMAgEBAgEAAbwBAgG8AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBIQEiAf8BqgESARMB/wGkAQ8BEAH/AZ8BDAENAf8BmgIK
-        Af8BlAIHAf8BjwIEAf8BiQIBAf8BgwIAAf8BNQIAAf8BNQIAAf8BLwIAAf8BKwIAAf/IAAHPASgBKQH/
-        AfMBjgGPAf8B5gGAAYEB/wGqAQEBAAH/AQQCAAH/AcMBtAGrAf8BxgG7AbMB/wHKAcEBvAH/Ac4ByAHE
-        Af8BEwEKAQUB/wGeAgAB/wGcAgAB/wGYAgAB/wEvAgAB/yQAAzYBWQJHAUYBgQMQARWYAAHRASwBLQL/
-        AZkBmgH/AewBhgGHAf8B5gGAAYEB/wEuARgBCAH/AQQCAAH/AY0BNQElAf8B7QHgAdgB/wHxAecB4AH/
-        AY8BPAEwAf8BowIAAf8BogIAAf8BnAIAAf8BNQIAAf8kAAMsAUMBUgJNAfoCagFHAfkDLwFKlAAB1AEy
-        ATMC/wGfAaAB/wH1AZABkQH/AewBhgGHAf8BLgEYAQgB/wMAAf8BBAIAAf8B6QHZAc4B/wHsAd0B1AH/
-        AYUBMQEkAf8BrgEIAQAB/wGqAQYBAQH/AaMCAAH/AToCAAH/JAADGAEiAzgBXAJ/AU8B/gJiAUkB9gMA
-        AQGQAAHXATgBOQL/AakBqgH/AfsBnwGgAf8B9QGTAZQB/wEuARgBCAH/AS4BGAEIAf8BLgEYAQgB/wEu
-        ARgBCAH/ATMBHwEPAf8BOgEnARgB/wG6ARMBEQH/AbIBDAEJAf8BqgEGAQEB/wGDAgAB/ywAAlwBWAHR
-        An8BVAH+Az8BbZAAAdsBgwGEAv8BswG0Av8BrQGuAf8B/AGjAaQB/wH0AY4BjwH/AewBhgGHAf8B5gGA
-        AYEB/wHfATYBNwH/AdcBLgEvAf8B0QEoASkB/wHBARoBGQH/AboBEwERAf8BsgENAQkB/wGJAgEB/xwA
-        AwcBCQwAAy4BRwFdAisB/AJ/AWYB/gMEAQaMAAHfAYoBiwL/AbsBvAL/AbYBtwH/AckBIAEdAf8BxAEb
-        ARMB/wG+ARUBCAH/AbgBDwEAAf8BswEKAQAB/wGtAQQBAAH/AacCAAH/AaECAAH/AcEBGgEZAf8BugET
-        AREB/wGPAgQB/wwAAeMBNQEAAf8B1gEvAQAB/wHHASYBAAH/AbYBHAEAAf8BrQEXAQAB/wGVAQkBAAH/
-        CAADGAEiAX8BaQE9Af4BqAGEAUAB/QNCAXWMAAHiAZEBkgL/Ab0BvgH/AcwBIwEkCf8B+wH4AfYB/wH2
-        Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wHlAdEBxgH/AeEBygG9Af8BoQIAAf8BwgEaARkB/wGUAgcB/wwA
-        AeUBgwEPAf8B3wEwAQAB/wHqAYIBBgH/AfMBmgEnAf8B4gGMAR4B/wMmATkIAAMEAQUBqAJAAf0CYgFJ
-        AfYDVgG0jAAB5QGXAZgC/wG9Ab4B/wHTASoBKw3/AfsB+AH2Af8B9gHuAeoB/wHwAeUB3gH/AeoB2wHS
-        Af8B5QHRAcYB/wGnAgAB/wHMAiQB/wGaAgoB/wwAAeYBjgEfAf8B7AGCAQgB/wHzAY0BGAH/AewBnAEz
-        Af8BVgJUAasDKgFBCAADAgEDAl8BMgH7AmABWQHrA1kBwowAAekBngGfAv8BvQG+Af8B3AEzATQR/wH7
-        AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/Aa0BBAEAAf8B1wEuAS8B/wGfAQwBDQH/DAAB5wGZ
-        ATAB/wHzAZoBJwH/AfQBnAEuAf8DXwHoAagCQAH9AlwBPgH4AkABPwFvBAADGgEkAl8BVwHoAmIBWAHv
-        A1gBvIwAAe0BpgGnAv8BvQG+Af8B5gGAAYEV/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wGzAQoBAAH/
-        Ad8BNgE3Af8BpAEPARAB/wgAAwcBCQHpAaQBgQH/A14B1QNHAYABYwFHATcB/AJ/AV4B/gHHAS0BAgH/
-        A00B+gNZAccCYQFbAeEBPgIrAfwCagFWAfkDXAHfjAAB8AGsAa0C/wG9Ab4B/wHvAYkBihn/AfsB+AH2
-        Af8B9gHuAeoB/wG4AQ8BAAH/ASQCAAH/AaoBEgETAf8MAAHqAaoBiwH/AyEBMAQAA1QBpgNfAfsDZAHs
-        Al8BRAH7AU0CKwH8AW0BYAFRAfcCZAFTAfEDZAHsA14B2YwAAfMBsgGzAv8BvQG+Af8B+AGSAZMd/wH7
-        AfgB9gH/Ab4BFQEIAf8BsAEVARYB/wGwARUBFgH/HAADVwG4AWIBRQE2AfwDZAHnA18B4wNhAdwDXwHj
-        A2cB8gMTARqMAAH1AbYBtwH/AfUBtgG3Af8B8wGyAbMB/wHxAa0BrgH/Ae4BpwGoAf8B6gGhAaIB/wHn
-        AZoBmwH/AeQBkwGUAf8B4AGOAY8B/wHdAYcBiAH/AdoBgAGBAf8B1gE3ATgB/wHTATEBMgH/AdEBLAEt
-        Af8gAAM4AVwDVwG4A2EB4gNbAcQDTgGUAxMBGv8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
-        AQEFAAGAFwAD/wEABP8EAAGAAQEC/wQAAYABAQH/AR8EAAGAAQEB/wEPBAABgAEBAf8BBwQAAYABAQH/
-        AccEAAGAAQEB/QHDBAABgAEBAcABwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABQwQAAYABAQGA
-        AQMEAAGAAQEByAEDBAABgAEBAfwBAwQAAYABAQH+AQcEAAT/BAAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
+        CAAAAk1TRnQBSQFMAgEBAgEAAcQBAgHEAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBIAEhAf8BqgERARIB/wGkAQ4BDwH/AZ8BCwEMAf8BmgIJ
+        Af8BlAIGAf8BjwIDAf8BiQIAAf8BgwIAAf8BNAIAAf8BNAIAAf8BLgIAAf8BKgIAAf/IAAHPAScBKAH/
+        AfMBjgGPAf8B5gGAAYEB/wGqAgAB/wEDAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHOAcgBxAH/
+        ARIBCQEEAf8BngIAAf8BnAIAAf8BmAIAAf8BLgIAAf8kAAM2AVkCRwFGAYEDEAEVmAAB0QErASwC/wGZ
+        AZoB/wHsAYYBhwH/AeYBgAGBAf8BLQEXAQcB/wEDAgAB/wGNATQBJAH/Ae0B4AHYAf8B8QHnAeAB/wGP
+        ATsBLwH/AaMCAAH/AaICAAH/AZwCAAH/ATQCAAH/JAADLAFDAVECTQH6AmoBRwH5Ay8BSpQAAdQBMQEy
+        Av8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/AS0BFwEHAf8DAAH/AQMCAAH/AekB2QHOAf8B7AHdAdQB/wGF
+        ATABIwH/Aa4BBwEAAf8BqgEFAQAB/wGjAgAB/wE5AgAB/yQAAxgBIgM4AVwCfwFPAf4CYgFJAfYDAAEB
+        kAAB1wE3ATgC/wGpAaoB/wH7AZ8BoAH/AfUBkwGUAf8BLQEXAQcB/wEtARcBBwH/AS0BFwEHAf8BLQEX
+        AQcB/wEyAR4BDgH/ATkBJgEXAf8BugESARAB/wGyAQsBCAH/AaoBBQEAAf8BgwIAAf8sAAJcAVgB0QJ/
+        AVQB/gM/AW2QAAHbAYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGkAf8B9AGOAY8B/wHsAYYBhwH/AeYBgAGB
+        Af8B3wE1ATYB/wHXAS0BLgH/AdEBJwEoAf8BwQEZARgB/wG6ARIBEAH/AbIBDAEIAf8BiQIAAf8cAAMH
+        AQkMAAMuAUcBXAIrAfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAR8BHAH/AcQBGgES
+        Af8BvgEUAQcB/wG4AQ4BAAH/AbMBCQEAAf8BrQEDAQAB/wGnAgAB/wGhAgAB/wHBARkBGAH/AboBEgEQ
+        Af8BjwIDAf8MAAHjATQBAAH/AdYBLgEAAf8BxwElAQAB/wG2ARsBAAH/Aa0BFgEAAf8BlQEIAQAB/wgA
+        AxgBIgF/AWkBPQH+AagBhAFAAf0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMASIBIwn/AfsB+AH2Af8B9gHu
+        AeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wHhAcoBvQH/AaECAAH/AcIBGQEYAf8BlAIGAf8MAAHl
+        AYMBDgH/Ad8BLwEAAf8B6gGCAQUB/wHzAZoBJgH/AeIBjAEdAf8DJgE5CAADBAEFAagCQAH9AmIBSQH2
+        A1YBtIwAAeUBlwGYAv8BvQG+Af8B0wEpASoN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/
+        AeUB0QHGAf8BpwIAAf8BzAIjAf8BmgIJAf8MAAHmAY4BHgH/AewBggEHAf8B8wGNARcB/wHsAZwBMgH/
+        AVYCVAGrAyoBQQgAAwIBAwJfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBMgEzEf8B+wH4
+        AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wGtAQMBAAH/AdcBLQEuAf8BnwELAQwB/wwAAecBmQEv
+        Af8B8wGaASYB/wH0AZwBLQH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNY
+        AbyMAAHtAaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEJAQAB/wHf
+        ATUBNgH/AaQBDgEPAf8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAWIBRQE2AfwCfwFeAf4BxwEsAQEB/wNN
+        AfoDWQHHAmEBWwHhAT0CKwH8AmoBVgH5A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/
+        AfYB7gHqAf8BuAEOAQAB/wEjAgAB/wGqAREBEgH/DAAB6gGqAYsB/wMhATAEAANUAaYDXwH7A2QB7AJf
+        AUQB+wFLAisB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/Ab0BvgH/AfgBkgGTHf8B+wH4
+        AfYB/wG+ARQBBwH/AbABFAEVAf8BsAEUARUB/xwAA1cBuAFhAUMBNQH8A2QB5wNfAeMDYQHcA18B4wNn
+        AfIDEwEajAAB9QG2AbcB/wH1AbYBtwH/AfMBsgGzAf8B8QGtAa4B/wHuAacBqAH/AeoBoQGiAf8B5wGa
+        AZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBNgE3Af8B0wEwATEB/wHRASsBLAH/
+        IAADOAFcA1cBuANhAeIDWwHEA04BlAMTARr/AI0AAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEB
+        BQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wEfBAABgAEBAf8BDwQAAYABAQH/AQcEAAGAAQEB/wHH
+        BAABgAEBAf0BwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAUMEAAGAAQEBgAED
+        BAABgAEBAcgBAwQAAYABAQH8AQMEAAGAAQEB/gEHBAAE/wQACw==
 </value>
   </data>
   <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4536,6 +4536,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
