--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="button_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-16.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="button_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-24.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -130,11 +127,8 @@
   <data name="notifica_Prenotazioni" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Windows Notify Messaging.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_35" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-35.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="beep_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beep-21.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-21.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button_34" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-34.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -142,20 +136,20 @@
   <data name="button_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-15.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_44" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-44.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="button_49" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-49.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="attach_file" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\attach_file.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="button_40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-40.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="beep_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beep-3.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="bar_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bar-small.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="button_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-22.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_46" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-46.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button_37" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-37.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -166,9 +160,6 @@
   <data name="beep_Piatti" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-24.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_29" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-29.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="button_42" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-42.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -178,11 +169,11 @@
   <data name="button_23" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-23.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_46" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-46.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_49" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-49.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="beep_28" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beep-28.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-22.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Hospitality_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hospitality.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,14 +181,11 @@
   <data name="beep_Lista" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-23.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Splash_screen_ombra_chef" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Splash-screen-ombra-chef.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Delete-PermissionHH" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Delete-PermissionHH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="beep_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beep-9.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="button_45" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-45.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_29" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-29.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button_39" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-39.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -211,20 +199,29 @@
   <data name="button_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-10.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Splash_screen_ombra_bar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash-screen-ombra-bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="button_27" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-27.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_17" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-17.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="beep_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beep-21.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="beep_28" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beep-28.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button_28" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-28.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="beep_27" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beep-27.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_44" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-44.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="beep_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\beep-3.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_17" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-17.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="button_47" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-47.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-48.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -238,17 +235,20 @@
   <data name="button_30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-30.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="beep_27" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beep-27.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="button_45" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-45.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Splash_screen_ombra_sporting" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Splash-screen-ombra-sporting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="button_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-4.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="button_47" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-47.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="beep_Normale" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-31.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Splash_screen_ombra_chef" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash-screen-ombra-chef.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="beep_Esci" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-4.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -259,8 +259,8 @@
   <data name="button_41" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-41.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="sport_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sport-small.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NewContentPage_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NewContentPage_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="beep_25" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-25.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -271,25 +271,40 @@
   <data name="Splash_screen_ombra_hospitality" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Splash-screen-ombra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="clock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chef_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\chef-small.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="button_38" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\button-38.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="beep_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-10.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="chef_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\chef-small.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="sport_Ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sport-small.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="button_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-4.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="beep_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\beep-9.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="CancelApproval_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CancelApproval_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="beep_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beep-6.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="button_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\button-21.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="button_35" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-35.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Splash_screen_ombra_bar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Splash-screen-ombra-bar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="button_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\button-16.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="NewContentPage_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NewContentPage_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DiscardChanges" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DiscardChanges.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
