Terminato procedure per Allegati in PrenCamera. + Inizio sviluppo funzione GeneraFileTxtAlloggiatiWeb.

--- a/Codice/Form/Hotel/ElencoSchedinePS.resx
+++ b/Codice/Form/Hotel/ElencoSchedinePS.resx
@@ -4491,4 +4491,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAABwAA
 </value>
   </data>
+  <metadata name="SaveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>431, 19</value>
+  </metadata>
 </root>
