--- a/Codice/Form/Hotel/PrenCamera.resx
+++ b/Codice/Form/Hotel/PrenCamera.resx
@@ -125,38 +125,38 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
-        CAAAAk1TRnQBSQFMAgEBAgEAAcwBAgHMAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBHwEgAf8BqgEQAREB/wGkAQ0BDgH/AZ8BCgELAf8BmgII
-        Af8BlAIFAf8BjwICAf8BiQIAAf8BgwIAAf8BMwIAAf8BMwIAAf8BLQIAAf8BKQIAAf/IAAHPASYBJwH/
-        AfMBjgGPAf8B5gGAAYEB/wGqAgAB/wECAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHOAcgBxAH/
-        AREBCAEDAf8BngIAAf8BnAIAAf8BmAIAAf8BLQIAAf8kAAM2AVkCRwFGAYEDEAEVmAAB0QEqASsC/wGZ
-        AZoB/wHsAYYBhwH/AeYBgAGBAf8BLAEWAQYB/wECAgAB/wGNATMBIwH/Ae0B4AHYAf8B8QHnAeAB/wGP
-        AToBLgH/AaMCAAH/AaICAAH/AZwCAAH/ATMCAAH/JAADLAFDAVACTQH6AmoBRwH5Ay8BSpQAAdQBMAEx
-        Av8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/ASwBFgEGAf8DAAH/AQICAAH/AekB2QHOAf8B7AHdAdQB/wGF
-        AS8BIgH/Aa4BBgEAAf8BqgEEAQAB/wGjAgAB/wE4AgAB/yQAAxgBIgM4AVwCfwFPAf4CYgFJAfYDAAEB
-        kAAB1wE2ATcC/wGpAaoB/wH7AZ8BoAH/AfUBkwGUAf8BLAEWAQYB/wEsARYBBgH/ASwBFgEGAf8BLAEW
-        AQYB/wExAR0BDQH/ATgBJQEWAf8BugERAQ8B/wGyAQoBBwH/AaoBBAEAAf8BgwIAAf8sAAJcAVgB0QJ/
+        CAAAAk1TRnQBSQFMAgEBAgEAAdQBAgHUAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwADNAFUAcMBHgEfAf8BqgEPARAB/wGkAQwBDQH/AZ8BCQEKAf8BmgIH
+        Af8BlAIEAf8BjwIBAf8BiQIAAf8BgwIAAf8BMgIAAf8BMgIAAf8BLAIAAf8BKAIAAf/IAAHPASUBJgH/
+        AfMBjgGPAf8B5gGAAYEB/wGqAgAB/wEBAgAB/wHDAbQBqwH/AcYBuwGzAf8BygHBAbwB/wHOAcgBxAH/
+        ARABBwECAf8BngIAAf8BnAIAAf8BmAIAAf8BLAIAAf8kAAM2AVkCRwFGAYEDEAEVmAAB0QEpASoC/wGZ
+        AZoB/wHsAYYBhwH/AeYBgAGBAf8BKwEVAQUB/wEBAgAB/wGNATIBIgH/Ae0B4AHYAf8B8QHnAeAB/wGP
+        ATkBLQH/AaMCAAH/AaICAAH/AZwCAAH/ATICAAH/JAADLAFDAU8CTQH6AmoBRwH5Ay8BSpQAAdQBLwEw
+        Av8BnwGgAf8B9QGQAZEB/wHsAYYBhwH/ASsBFQEFAf8DAAH/AQECAAH/AekB2QHOAf8B7AHdAdQB/wGF
+        AS4BIQH/Aa4BBQEAAf8BqgEDAQAB/wGjAgAB/wE3AgAB/yQAAxgBIgM4AVwCfwFPAf4CYgFJAfYDAAEB
+        kAAB1wE1ATYC/wGpAaoB/wH7AZ8BoAH/AfUBkwGUAf8BKwEVAQUB/wErARUBBQH/ASsBFQEFAf8BKwEV
+        AQUB/wEwARwBDAH/ATcBJAEVAf8BugEQAQ4B/wGyAQkBBgH/AaoBAwEAAf8BgwIAAf8sAAJcAVgB0QJ/
         AVQB/gM/AW2QAAHbAYMBhAL/AbMBtAL/Aa0BrgH/AfwBowGkAf8B9AGOAY8B/wHsAYYBhwH/AeYBgAGB
-        Af8B3wE0ATUB/wHXASwBLQH/AdEBJgEnAf8BwQEYARcB/wG6AREBDwH/AbIBCwEHAf8BiQIAAf8cAAMH
-        AQkMAAMuAUcBWwIrAfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAR4BGwH/AcQBGQER
-        Af8BvgETAQYB/wG4AQ0BAAH/AbMBCAEAAf8BrQECAQAB/wGnAgAB/wGhAgAB/wHBARgBFwH/AboBEQEP
-        Af8BjwICAf8MAAHjATMBAAH/AdYBLQEAAf8BxwEkAQAB/wG2ARoBAAH/Aa0BFQEAAf8BlQEHAQAB/wgA
-        AxgBIgF/AWkBPQH+AagBhAFAAf0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMASEBIgn/AfsB+AH2Af8B9gHu
-        AeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wHhAcoBvQH/AaECAAH/AcIBGAEXAf8BlAIFAf8MAAHl
-        AYMBDQH/Ad8BLgEAAf8B6gGCAQQB/wHzAZoBJQH/AeIBjAEcAf8DJgE5CAADBAEFAagCQAH9AmIBSQH2
-        A1YBtIwAAeUBlwGYAv8BvQG+Af8B0wEoASkN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/
-        AeUB0QHGAf8BpwIAAf8BzAIiAf8BmgIIAf8MAAHmAY4BHQH/AewBggEGAf8B8wGNARYB/wHsAZwBMQH/
-        AVYCVAGrAyoBQQgAAwIBAwJfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBMQEyEf8B+wH4
-        AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wGtAQIBAAH/AdcBLAEtAf8BnwEKAQsB/wwAAecBmQEu
-        Af8B8wGaASUB/wH0AZwBLAH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNY
-        AbyMAAHtAaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEIAQAB/wHf
-        ATQBNQH/AaQBDQEOAf8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAWEBQwE1AfwCfwFeAf4BxwErAQAB/wNN
-        AfoDWQHHAmEBWwHhATwCKwH8AmoBVgH5A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/
-        AfYB7gHqAf8BuAENAQAB/wEiAgAB/wGqARABEQH/DAAB6gGqAYsB/wMhATAEAANUAaYDXwH7A2QB7AJf
-        AUQB+wFJAisB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/Ab0BvgH/AfgBkgGTHf8B+wH4
-        AfYB/wG+ARMBBgH/AbABEwEUAf8BsAETARQB/xwAA1cBuAFgAUEBNAH8A2QB5wNfAeMDYQHcA18B4wNn
+        Af8B3wEzATQB/wHXASsBLAH/AdEBJQEmAf8BwQEXARYB/wG6ARABDgH/AbIBCgEGAf8BiQIAAf8cAAMH
+        AQkMAAMuAUcBWgIrAfwCfwFmAf4DBAEGjAAB3wGKAYsC/wG7AbwC/wG2AbcB/wHJAR0BGgH/AcQBGAEQ
+        Af8BvgESAQUB/wG4AQwBAAH/AbMBBwEAAf8BrQEBAQAB/wGnAgAB/wGhAgAB/wHBARcBFgH/AboBEAEO
+        Af8BjwIBAf8MAAHjATIBAAH/AdYBLAEAAf8BxwEjAQAB/wG2ARkBAAH/Aa0BFAEAAf8BlQEGAQAB/wgA
+        AxgBIgF/AWkBPQH+AagBhAFAAf0DQgF1jAAB4gGRAZIC/wG9Ab4B/wHMASABIQn/AfsB+AH2Af8B9gHu
+        AeoB/wHwAeUB3gH/AeoB2wHSAf8B5QHRAcYB/wHhAcoBvQH/AaECAAH/AcIBFwEWAf8BlAIEAf8MAAHl
+        AYMBDAH/Ad8BLQEAAf8B6gGCAQMB/wHzAZoBJAH/AeIBjAEbAf8DJgE5CAADBAEFAagCQAH9AmIBSQH2
+        A1YBtIwAAeUBlwGYAv8BvQG+Af8B0wEnASgN/wH7AfgB9gH/AfYB7gHqAf8B8AHlAd4B/wHqAdsB0gH/
+        AeUB0QHGAf8BpwIAAf8BzAIhAf8BmgIHAf8MAAHmAY4BHAH/AewBggEFAf8B8wGNARUB/wHsAZwBMAH/
+        AVYCVAGrAyoBQQgAAwIBAwJfATIB+wJgAVkB6wNZAcKMAAHpAZ4BnwL/Ab0BvgH/AdwBMAExEf8B+wH4
+        AfYB/wH2Ae4B6gH/AfAB5QHeAf8B6gHbAdIB/wGtAQEBAAH/AdcBKwEsAf8BnwEJAQoB/wwAAecBmQEt
+        Af8B8wGaASQB/wH0AZwBKwH/A18B6AGoAkAB/QJcAT4B+AJAAT8BbwQAAxoBJAJfAVcB6AJiAVgB7wNY
+        AbyMAAHtAaYBpwL/Ab0BvgH/AeYBgAGBFf8B+wH4AfYB/wH2Ae4B6gH/AfAB5QHeAf8BswEHAQAB/wHf
+        ATMBNAH/AaQBDAENAf8IAAMHAQkB6QGkAYEB/wNeAdUDRwGAAWABQQE0AfwCfwFeAf4BxwEqAQAB/wNN
+        AfoDWQHHAmEBWwHhATsCKwH8AmoBVgH5A1wB34wAAfABrAGtAv8BvQG+Af8B7wGJAYoZ/wH7AfgB9gH/
+        AfYB7gHqAf8BuAEMAQAB/wEhAgAB/wGqAQ8BEAH/DAAB6gGqAYsB/wMhATAEAANUAaYDXwH7A2QB7AJf
+        AUQB+wFHAisB/AFtAWABUQH3AmQBUwHxA2QB7ANeAdmMAAHzAbIBswL/Ab0BvgH/AfgBkgGTHf8B+wH4
+        AfYB/wG+ARIBBQH/AbABEgETAf8BsAESARMB/xwAA1cBuAFfAT8BMwH8A2QB5wNfAeMDYQHcA18B4wNn
         AfIDEwEajAAB9QG2AbcB/wH1AbYBtwH/AfMBsgGzAf8B8QGtAa4B/wHuAacBqAH/AeoBoQGiAf8B5wGa
-        AZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBNQE2Af8B0wEvATAB/wHRASoBKwH/
+        AZsB/wHkAZMBlAH/AeABjgGPAf8B3QGHAYgB/wHaAYABgQH/AdYBNAE1Af8B0wEuAS8B/wHRASkBKgH/
         IAADOAFcA1cBuANhAeIDWwHEA04BlAMTARr/AI0AAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEB
         BQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wEfBAABgAEBAf8BDwQAAYABAQH/AQcEAAGAAQEB/wHH
         BAABgAEBAf0BwwQAAYABAQHAAcMEAAGAAQEBwAHDBAABgAEBAcABwwQAAYABAQHAAUMEAAGAAQEBgAED
@@ -4536,6 +4536,9 @@
   </data>
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>246, 17</value>
+  </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>378, 17</value>
   </metadata>
   <metadata name="ColorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>472, 17</value>
